toolchains/eui-compiler/tests/error/baselines/scroller-childrens/expect.txt
Error: Exml Error: eui.Scroller can have only one child, where has 2
                <e:Group>
                 ^
at line: 6, column: 18
at file: